# counterfeit

./: Cargo.toml  README.md  basics.md
counterfeit/: Cargo.toml
counterfeit/src/: config.rs  main.rs  options.rs  services.rs
counterfeit_core/: Cargo.toml
counterfeit_core/src/: config.rs  default.rs  dir_picker.rs  dispatcher.rs  error.rs  file_picker.rs  lib.rs  rest.rs
counterfeit_core/src/default/: default_dir_picker.rs  default_file_picker.rs  dir_dispatcher.rs  file_dispatcher.rs
counterfeit_core/src/mapper/: dir_picker.rs  mutation.rs
counterfeit_core/src/rest/: rest_dir_dispatcher.rs  rest_file_dispatcher.rs
responses/: get.html  index.html
responses/_id_/toys/: get_truck.json
responses/_toys_/: get_doll.json
responses/food/: beans.json  get_rice.json  get_tacos.json
src/: config.rs  main.rs  mapper.rs  old_mapper.rs  options.rs
src/mapper/: dir_picker.rs  file_picker.rs  mutation.rs  mutation_handler.rs  response_hook.rs
