[package]
name = "counterfeit"
description = "Mock your REST API with files"
license = "MIT"
version = "0.2.1"
authors = ["picklenerd <jordan.t.grace@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
counterfeit_core = "0.2.0"
futures = "0.3"
hyper = { version = "0.14.1", features = ["server", "http1", "tcp"] }
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
