[package]
name = "counterfeit_core"
version = "0.1.0"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
hyper = "0.13"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
walkdir = "2.3"
