[package]
name = "counterfeit_core"
description = "Backend code for counterfeit crate"
license = "MIT"
version = "0.2.0"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
walkdir = "2.3"
